--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : solarized_light  # {tomorrow, solarized_light, ...}
 license     : by-sa
 widgets     : [mathjax, bootstrap, quiz]     # {mathjax, quiz, bootstrap}
-mode        : standalone # {standalone, draft, selfcontained}
+mode        : selfcontained # {standalone, draft, selfcontained}
 ---
 
 ## Instruções
@@ -464,6 +464,7 @@ No YAML:
 
 	---
 
+
 --- &radio
 
 ## Question 1
@@ -482,6 +483,7 @@ This is a hint
 *** .explanation
 
 This is an explanation
+
 
 ---
 
